--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -7,11 +7,10 @@ on:
 jobs:
   python_tests:
     name: Run Tests
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        os: [ "ubuntu-latest", windows-latest", "macos-latest" ]
         python-version: [ "3.8", "3.9", "3.10" ]
 
     steps:
