--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Run tests with coverage
         timeout-minutes: 2
         run: |
-          coverage run -m unittest discover 
+          coverage run -m unittest discover --verbose
           coverage report --omit="tests/*"
           coverage xml --omit="tests/*" -o report_${{ matrix.python-version }}.xml
 
