--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ authors = ["Daniel Perrefort", ]
 description = "A Python parallelization framework for easily building powerful data analysis networks."
 readme = "README.md"
 repository = "https://github.com/Egon-Framework/egon"
-keywords = ["parallel", "multiprocessing", "pipeline", "network", "framework"]
+keywords = ["egon", "egon-framework", "parallel", "multiprocessing"]
 classifiers = [
     "Intended Audience :: Developers",
     "Natural Language :: English",
