--- a/.github/workflows/PackageTest.yml
+++ b/.github/workflows/PackageTest.yml
@@ -5,7 +5,7 @@ on:
   push:
 
 jobs:
-  python_tests:
+  run_tests:
     name: Run Tests
     runs-on: ubuntu-latest
     strategy:
@@ -37,14 +37,24 @@ jobs:
         env:
           CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
 
-  codacy-coverage-reporter:
-    name: Report code coverage
+  # Tell codacy we are done reporting test coverage
+  report-code-coverage:
+    name: Report Code Coverage
     runs-on: ubuntu-latest
-    needs: python_tests
+    needs: run-tests
     steps:
-
-      # Tell codacy we are done reporting test coverage
       - name: Finish reporting coverage
         run: bash <(curl -Ls https://coverage.codacy.com/get.sh) final
         env:
           CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
+
+  # Use this job for branch protection rules
+  report-test-status:
+    name: Report Test Status
+    runs-on: ubuntu-latest
+    needs: run-tests
+    if: always()
+    steps:
+      - name: Check build status
+        if: ${{ contains(needs.*.result, 'failure') }}
+        run: exit 1
