--- a/.github/workflows/PackageTest.yml
+++ b/.github/workflows/PackageTest.yml
@@ -1,7 +1,8 @@
-name: Tests
+name: Test Package
 
 on:
   workflow_dispatch:
+  workflow_call:
   push:
 
 jobs:
@@ -14,26 +15,26 @@ jobs:
         python-version: [ "3.8", "3.9", "3.10", "3.11" ]
 
     steps:
-      - name: Checkout source
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
+      - name: Install poetry
+        run: |
+          pip install poetry
+          poetry env use python${{ matrix.python_version }}
 
-      - name: Install package dependencies
-        run: pip install coverage .
+      - name: Install dependencies
+        run: poetry install --with tests
 
       - name: Run tests with coverage
         run: |
-          coverage run -m unittest discover 
-          coverage report --omit="tests/*"
-          coverage xml --omit="tests/*" -o report_${{ matrix.python-version }}.xml
+          poetry run coverage run -m unittest discover 
+          poetry run coverage report --omit="tests/*"
+          poetry run coverage xml --omit="tests/*" -o coverage.xml
 
-      # Report test coverage to codacy for the python version being tested
+      # Report partial coverage results to codacy for the current python version
       - name: Report partial coverage results
-        run: bash <(curl -Ls https://coverage.codacy.com/get.sh) report --partial -l Python -r report_${{ matrix.python-version }}.xml
+        run: bash <(curl -Ls https://coverage.codacy.com/get.sh) report --partial -l Python -r coverage.xml
         env:
           CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
 
@@ -50,10 +51,10 @@ jobs:
 
   # Use this job for branch protection rules
   report-test-status:
+    if: always()
     name: Report Test Status
     runs-on: ubuntu-latest
     needs: run-tests
-    if: always()
     steps:
       - name: Check build status
         if: ${{ contains(needs.*.result, 'failure') }}
