--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,12 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.8"
 
+[tool.poetry.group.tests]
+optional = true
+
+[tool.poetry.group.tests.dependencies]
+coverage = "*"
+
 [tool.poetry.group.docs]
 optional = true
 
