--- a/.github/workflows/PackageRelease.yml
+++ b/.github/workflows/PackageRelease.yml
@@ -10,8 +10,8 @@ jobs:
     uses: ./.github/workflows/PackageTest.yml
     secrets: inherit
 
-  build:
-    name: Build Source Distribution
+  publish:
+    name: Publish Source Distribution
     needs: test
     runs-on: ubuntu-latest
 
@@ -31,8 +31,8 @@ jobs:
       # Git release tags are expected to start with "refs/tags/v"
       - name: Set package version
         run: |
-          tag=${{github.ref}}
-          poetry version "${tag#refs/tags/v}"
+          release_tag=${{github.ref}}
+          poetry version "${release_tag#refs/tags/v}"
 
       - name: Build package
         run: poetry build -v
@@ -41,5 +41,5 @@ jobs:
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           verbose: true
-          user: ${{ secrets.PYPI_USER }}
-          password: ${{ secrets.PYPI_PASSWORD }}
+          user: ${{ secrets.REPO_USER }}
+          password: ${{ secrets.REPO_PASSWORD }}
